Update SessionConfig.java