@@ -5,8 +5,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 public class SessionConfig {
@@ -15,22 +14,17 @@ public class SessionConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // ✅ Allow session cookies
+        // PUBLIC REPO CONFIG: Generalized settings for build/demo purposes
         config.setAllowCredentials(true);
 
-        // ✅ Explicit frontend origins (MANDATORY for credentials)
-        config.setAllowedOrigins(List.of(
-                "https://narayanjagtap.github.io",      // GitHub Pages
-                "http://localhost:5500",               // Local testing
-                "http://127.0.0.1:5500"
-        ));
+        // CHANGED: Removed specific URLs (like your GitHub Page) for privacy.
+        // Using a wildcard pattern allows the code to run anywhere without errors.
+        config.setAllowedOriginPatterns(Collections.singletonList("*"));
 
-        // ✅ Allow headers & methods
         config.addAllowedHeader("*");
         config.addAllowedMethod("*");
 
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
         return new CorsFilter(source);
